--- a/src/main/resources/templates/back/allCoyPage.html
+++ b/src/main/resources/templates/back/allCoyPage.html
@@ -75,7 +75,7 @@
 
     <!--**********************************
         Sidebar start
-        ***********************************-->
+    ***********************************-->
     <div class="deznav">
         <div class="deznav-scroll">
             <ul class="metismenu" id="menu">
@@ -89,6 +89,15 @@
                     </ul>
 
                 </li>
+                <!--                <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">-->
+                <!--                    <i class="flaticon-025-dashboard"></i>-->
+                <!--                    <span class="nav-text">运单管理</span>-->
+                <!--                </a>-->
+                <!--                    <ul aria-expanded="false">-->
+                <!--                        <li><a th:href="@{/addOrder}">添加运单</a></li>-->
+                <!--                        <li><a th:href="@{/allOrder}">运单列表</a></li>-->
+                <!--                    </ul>-->
+                <!--                </li>-->
                 <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
                     <i class="flaticon-025-dashboard"></i>
                     <span class="nav-text">运输工具管理</span>
@@ -96,6 +105,17 @@
                     <ul aria-expanded="false">
                         <li><a th:href="@{/coy/allCoy}">运输工具列表页</a></li>
                         <li><a th:href="@{/coy/oneCoy}">运输工具详情页</a></li>
+                    </ul>
+                </li>
+
+                </li>
+                <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
+                    <i class="flaticon-025-dashboard"></i>
+                    <span class="nav-text">运单管理</span>
+                </a>
+                    <ul aria-expanded="false">
+                        <li><a th:href="@{/addOrder}">添加运单</a></li>
+                        <li><a th:href="@{/allOrder}">运单列表</a></li>
                     </ul>
                 </li>
                 <!--留出来富余   后面再看-->
@@ -155,7 +175,8 @@
     </div>
     <!--**********************************
         Sidebar end
-***********************************-->
+    ***********************************-->
+
 
     <!--**********************************
         Content body start
@@ -312,9 +333,9 @@
                                                         <a class="dropdown-item" href=""
                                                            th:onclick="'subSetCoyName(1, ' + ${info.coyId} + ', $(\'\#name'+ ${info.coyId} +'\').val());'">修改运输工具名称</a>
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetLicense(1, ' + ${info.coyId} + ', $(\'\#license'+ ${info.coyId} +'\').val());'">修改牌照信息</a>
+                                                           th:onclick="'subSetLicense(2, ' + ${info.coyId} + ', $(\'\#license'+ ${info.coyId} +'\').val());'">修改牌照信息</a>
                                                         <a class="dropdown-item" href=""
-                                                           th:onclick="'subSetType(1, ' + ${info.coyId} + ', $(\'\#type'+ ${info.coyId} +'\').val());'">修改运输类型</a>
+                                                           th:onclick="'subSetType(3, ' + ${info.coyId} + ', $(\'\#type'+ ${info.coyId} +'\').val());'">修改运输类型</a>
                                                         <div class="dropdown-divider"></div>
                                                         <a class="dropdown-item text-danger"
                                                            th:href="@{'/coy/setInfo?type=1&info=null&op=0&id=' + ${info.coyId}}">删除</a>
@@ -450,7 +471,7 @@
 <script th:src="@{/js/global.min.js}"></script>
 <script th:src="@{/js/Chart.bundle.min.js}"></script>
 <script th:src="@{/js/jquery-3.5.1.js}"></script>
-<script th:src="@{/js/proj/setUserInfo.js}"></script>
+<script th:src="@{/js/proj/setCoyInfo.js}"></script>
 <!-- Apex Chart -->
 <script th:src="@{/js/apexchart.js}"></script>
 <script th:src="@{/js/jquery.peity.min.js}"></script>
