--- a/src/main/resources/templates/back/back_index.html
+++ b/src/main/resources/templates/back/back_index.html
@@ -103,6 +103,16 @@
                     </ul>
                 </li>
 
+                </li>
+                <li><a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
+                    <i class="flaticon-025-dashboard"></i>
+                    <span class="nav-text">运单管理</span>
+                </a>
+                    <ul aria-expanded="false">
+                        <li><a th:href="@{/addOrder}">添加运单</a></li>
+                        <li><a th:href="@{/allOrder}">运单列表</a></li>
+                    </ul>
+                </li>
                 <!--留出来富余   后面再看-->
                 <!--<li>
                     <a aria-expanded="false" class="has-arrow ai-icon" th:href="@{#}">
