--- a/src/main/resources/templates/back/back_index.html
+++ b/src/main/resources/templates/back/back_index.html
@@ -109,8 +109,8 @@
                     <span class="nav-text">运单管理</span>
                 </a>
                     <ul aria-expanded="false">
-                        <li><a th:href="@{/addOrder}">添加运单</a></li>
-                        <li><a th:href="@{/allOrder}">运单列表</a></li>
+                        <!--<li><a th:href="@{/addOrder}">添加运单</a></li>-->
+                        <li><a th:href="@{/wb/all}">运单列表</a></li>
                     </ul>
                 </li>
                 <!--留出来富余   后面再看-->
